# pytosql

./: .gitignore  Makefile  README.md  setup.cfg
pytosql/: __init__.py
tests/: test_py2sql.py
