[metadata]
name = pytosql
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = Converts python to sqlalchemy queries
license = BSD
author = David Sternlicht
author_email = dsternlicht@infinidat.com

[extras]
testing =
    pytest>=4.6.0
    pylint>=2.0
    black
    isort
    mypy

[tool:pytest]
testpaths = tests
